@@ -3,7 +3,7 @@
 /*
  * LMS version 1.11-git
  *
- *  (C) Copyright 2001-2017 LMS Developers
+ *  (C) Copyright 2001-2019 LMS Developers
  *
  *  Please, see the doc/AUTHORS for more information about authors!
  *
@@ -57,7 +57,8 @@ if ($taction == 'delperm')
 	if (!empty($mail_dir))
 		rrmdir($mail_dir . DIRECTORY_SEPARATOR . sprintf('%06d', $ticket));
 
-	$SESSION->redirect('?m=rtqueueview&id=' . $queue['id']);
+	$SESSION->redirect('?m=rtqueueview'
+		. ($SESSION->is_set('backid') ? '#' . $SESSION->get('backid') : ''));
 }
 
 if ($qaction == 'delperm')
