@@ -245,6 +245,8 @@ version ?.??.?? (????-??-??):
   - improvement: ticket message reply with citing forced by click on newly added button [chilan]
   - enhancement: added representative customer contact type as it will be used to select
     them on documents [chilan]
+  - improvement: try to restore scrolling state of rtqueueview or eventlist after
+    each operation has runned [chilan]
 
 version 1.11.23 (2018-03-21):
 
